# SoftwareDevelopementMeditations

./: 2019_year-end_summary.md  README.md  SUMMARY.md  Thing20190725.md  Think20190823.md  only_thinking_forever.md
android/: README.md  charles_https.md
android/Android/: anr.md  cold_start.md  jvm.md  view.md
android/JNI/: QA.md  jni.md  (+9 more)
aosp/: README.md
application_debug/: README.md  log.md
code/: .config  .gitignore  .vscode  CMakeLists.txt  Makefile  test.c
code/.cache/clangd/index/: csapp.c.89AA8DAFF525D719.idx  csapp.h.A8F82B0F14FA7D1F.idx  thread.c.4DA779FE23603C3D.idx
code/arm64/: hello  hello.s  helloworld.s
code/system/: CMakeLists.txt  thread.c
code/system/concurrence/thread/: CMakeLists.txt  tls.c
code/system/memory/: CMakeLists.txt  allocate_size.c  null.c  sizeof.c
data_structure_and_algorithms/: README.md  SUMMARY.md
debug/: README.md  android_bugreport.md  log.md  native_crash.md
design_patterns/: README.md  SUMMARY.md  problem.md
development/: code_explore.md
harmony_os/: README.md  TODO.md  adaptation.md  hot_fix.md  web.md
language/: Module.md  OOP.md  README.md  SUMMARY.md  zheng-ze-biao-da-shi.md
linux/: README.md  SUMMARY.md  file-system.md  file_transfer_ssh.md  lfs.md  man.md  mount.md  package.md  regular_expression.md
media/: README.md  surface_view.md
native/: thread_video_feed_activity.md
performace/: README.md  handler.md  jvm.md  view.md
qemu/: README.md  mac_aarch64.sh  mac_amd64.sh  qemu_serial.sh
think/: SUMMARY.md  only_thinking_forever.md
tools/: compression.md  file_transfer_ftp.md  ranger.md
(+458 files in other folders)
